fix: elements spacing and private info title name

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -152,6 +152,13 @@ a {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: space-evenly;
+	flex: 2;
+	font-size: 1.2rem;
+}
+
+.container-profile_card-footer {
+	flex: 1;
 }
 
 .container-profile_information {
@@ -162,11 +169,12 @@ a {
 }
 
 .basic-information,
-.security {
+.privacy {
 	display: flex;
 	flex-direction: column;
+	margin-bottom: 2rem;
 }
 .basic-information_title,
-.security_title {
+.privacy_title {
 	border-bottom: 1px solid rgba(67, 97, 238, 0.5);
 }
